# first-rust-program

./: Cargo.toml  README.md
src/: main.rs  posts.rs
